[#37] feat:  기능 복구